--- a/xcx-active/pages/addrEdit/addrEdit.wxss
+++ b/xcx-active/pages/addrEdit/addrEdit.wxss
@@ -1,9 +1,9 @@
 /* pages/addrEdit/addrEdit.wxss */
 .info-list {
-    padding: 15rpx 30rpx;
+    padding: 30rpx;
     border-bottom: 1rpx solid #efeff4;
     background-color: #fff;
-    font-size: 26rpx;
+    font-size: 30rpx;
     color: #353535;
     overflow: hidden;
     display: flex;
@@ -17,20 +17,6 @@
 }
 .info-list input {
     flex: 3;
-}
-.addressDefault{
-   height:80rpx;
-   line-height:80rpx;
-   display:flex;
-   background:#fff;
-   padding:0 30rpx;
-   font-size:26rpx;
-   box-sizing:border-box;
-   border-bottom: 1rpx solid #efeff4;
-}
-.addressDefault .addrDefault{
-   height:10rpx;
-   margin-left:455rpx
 }
 .seve-btn{
     background-color: #339900;
