--- a/xcx-active/pages/shoppingcar/shoppingcar.wxss
+++ b/xcx-active/pages/shoppingcar/shoppingcar.wxss
@@ -66,12 +66,13 @@
     display: flex;
     line-height: 110rpx;
     font-size: 32rpx;
+    border-top: 1rpx solid #ddd;
 }
 .footBar .totail-price {
     flex: 2;
     color: #353535;
     text-align: left;
-    padding-left: 30rpx;
+    padding-left: 30rpx; 
 }
 .footBar .settlement-btn {
     flex: 1;
