--- a/xcx-active/pages/addrOpt/addrOpt.wxss
+++ b/xcx-active/pages/addrOpt/addrOpt.wxss
@@ -18,6 +18,7 @@
 }
 .addr-list view text.consignee {
     display: block;
+    font-size: 32rpx;
 }
 .addr-list .select-icon {
     position: absolute;
