--- a/xcx-active/pages/orderConfirm/orderConfirm.wxml
+++ b/xcx-active/pages/orderConfirm/orderConfirm.wxml
@@ -1,6 +1,6 @@
 <view class="container">
   <view class="addr-opt" bindtap="addrOptFn">
-    <text>{{name}} {{mobile}}</text>
+    <text class="consignee">{{name}} {{mobile}}</text>
     <text>{{value}}</text>
   </view>
   <view class="addr-color"></view>
