--- a/xcx-active/pages/index/index.wxml
+++ b/xcx-active/pages/index/index.wxml
@@ -24,7 +24,8 @@
 
       <!--产品列表-start-->
       <view class="active-list" wx:for="{{actData}}" wx:key="i">
-        <image src="{{item.img?item.img:item.defauliImg}}"></image>
+      <!--{{item.img?item.img:item.defauliImg}}-->
+        <image src="../../images/list1.jpg"></image>
         <text class="product-tit ellipsis">{{item.name}}</text>
         <text class="product-pro">{{item.companyName}}</text>
         <view class="product-info">
