--- a/xcx-active/pages/orderConfirm/orderConfirm.wxml
+++ b/xcx-active/pages/orderConfirm/orderConfirm.wxml
@@ -7,7 +7,8 @@
 
   <!--订单列表-start-->
   <view class="order-con" wx:for="{{orderData}}" wx:key="i">
-    <image src="{{item.img ? item.img : item.defauliImg}}"></image>
+  <!--{{item.img ? item.img : item.defauliImg}}-->
+    <image src="../../images/list1.jpg"></image>
     <view class="order-info">
       <text class="order-tit ellipsis">{{item.name}}</text>
       <text class="order-pro ellipsis2">{{item.companyName}}</text>
