--- a/xcx-active/pages/orderDetail/orderDetail.wxml
+++ b/xcx-active/pages/orderDetail/orderDetail.wxml
@@ -6,7 +6,8 @@
 
   <!--订单列表-start-->
   <view class="order-con" wx:for="{{orderDeatilData.items}}" wx:key="i">
-    <image src="{{item.img}}"></image>
+  <!--{{item.img}}-->
+    <image src="../../images/list1.jpg"></image>
     <view class="order-info">
       <text class="order-tit ellipsis">{{item.name}}</text>
       <text class="order-pro ellipsis2">由 {{item.name}} 提供发货和售后</text>
