--- a/xcx-active/pages/addrEdit/addrEdit.wxml
+++ b/xcx-active/pages/addrEdit/addrEdit.wxml
@@ -1,11 +1,12 @@
 <view class="container">
+  <view class="errorMsg" hidden="{{isError}}">{{errorMsg}}</view>
   <view class="info-list postman">
     <text>收货人</text>
     <input placeholder="请输入收货人姓名" placeholder-style="color:#ddd" value="{{consignee}}" bindinput="consigneeFn" />
   </view>
   <view class="info-list">
     <text>联系电话</text>
-    <input placeholder="请输入收货人的联系电话"  placeholder-style="color:#ddd" value="{{mob}}" bindblur="mobFn" />
+    <input placeholder="请输入收货人的联系电话" type="number" placeholder-style="color:#ddd" value="{{mob}}" bindblur="mobFn" />
   </view>
   <view class="info-list">
     <text>所在地区</text>
