--- a/xcx-active/pages/orderList/orderList.wxml
+++ b/xcx-active/pages/orderList/orderList.wxml
@@ -10,7 +10,6 @@
       <view class="order-head">
         <text class="order-status">未支付</text>
         <view class="order-price">
-          <text class="conpousTip">已使用￥{{item.couponDiscount}}优惠券</text>
             共{{item.itemQty}}件 合计：
             <text class="totail-price">￥{{item.retailPayAmount}}</text>
         </view>
@@ -19,7 +18,7 @@
       <!--{{list.img}}-->
         <image src="../../images/list1.jpg"></image>
         <view class="order-info">
-         <text class="order-tit ellipsis">{{list.name}}</text>
+         <text class="order-tit ellipsis">{{list.brand}}{{list.itemName}}</text>
           <text class="order-pro ellipsis2">由 {{item.saleName}} 提供发货和售后</text>
           <view class="peice-wrap">
             <text class="weight">{{list.norm}}</text>
@@ -29,6 +28,7 @@
         </view>
       </view>
       <view class="order-work">
+        <text class="conpousTip">已使用￥{{item.couponDiscount}}优惠券</text>
         <button class="order-cancle" bindtap="cancleFn" data-orderId="{{item.id}}">取消订单</button>
         <button class="order-payment" bindtap="placeOrderFn" data-orderId="{{item.id}}">立即支付</button>
       </view>
@@ -40,14 +40,11 @@
     <view class="order-list" wx:for="{{unListData}}" wx:key="i">
       <view class="order-head">
         <text class="order-status paid-status">已支付</text>
-        <view class="order-price">
-          <text class="conpousTip conpousTiped">已使用￥{{item.couponDiscount}}优惠券</text>
-        </view>
       </view>
       <view class="order-con"  wx:for="{{item.items}}" data-orderId="{{item.id}}" bindtap="orderDetailFn" wx:key="i" wx:for-item="unList">
         <image src="{{unList.img}}"></image>
         <view class="order-info">
-          <text class="order-tit ellipsis">{{unList.name}}</text>
+          <text class="order-tit ellipsis">{{list.brand}}{{list.itemName}}</text>
           <text class="order-pro ellipsis2">由 {{item.saleName}} 提供发货和售后</text>
           <view class="peice-wrap">
             <text class="weight">{{unList.norm}}</text>
@@ -55,6 +52,9 @@
             <text class="price">￥{{unList.price}}</text>
           </view>
         </view>
+      </view>
+      <view class="order-work">
+        <text class="conpousTip conpousTiped">已使用￥{{item.couponDiscount}}优惠券</text>
       </view>
     </view>
   </view>
