--- a/xcx-active/pages/addrEdit/addrEdit.wxss
+++ b/xcx-active/pages/addrEdit/addrEdit.wxss
@@ -28,3 +28,12 @@
     background-color: #dddddd;
     color: #666666;
 }
+.errorMsg {
+    background-color: #f60;
+    text-align: center;
+    padding: 0 30rpx;
+    font-size: 30rpx;
+    line-height: 50rpx;
+    height: 50rpx;
+    color: #fff;
+}
