--- a/xcx-active/pages/index/index.wxml
+++ b/xcx-active/pages/index/index.wxml
@@ -35,12 +35,12 @@
         </view>
         <view class="operation-group" data-index="{{index}}">
           <view class="operation">
-            <text class="decr-btn" bindtap="decrFn" data-cartid="{{item.itemId}}">-</text>
+            <text class="decr-btn" bindtap="decrFn" data-cartid="{{item.id}}">-</text>
             <input class="operation-result" disabled="true" value="{{item.moq <= 1 ? 1 : item.moq}}" type="number" />
-            <text class="incr-btn" bindtap="incrFn" data-cartid="{{item.itemId}}">+</text>
+            <text class="incr-btn" bindtap="incrFn" data-cartid="{{item.id}}">+</text>
           </view>
-          <button class="join-shoppingcar-btn" data-shopcar="false" data-cartid="{{item.itemId}}" bindtap="joinCarFn">加入购物车</button>
-          <button class="purchase-btn" data-cartid="{{item.itemId}}" bindtap="purchaseFn">立即购买</button>
+          <button class="join-shoppingcar-btn" data-shopcar="false" data-cartid="{{item.id}}" bindtap="joinCarFn">加入购物车</button>
+          <button class="purchase-btn" data-cartid="{{item.id}}" bindtap="purchaseFn">立即购买</button>
         </view>
       </view>
     </view>
