--- a/xcx-active/pages/shoppingcar/shoppingcar.wxml
+++ b/xcx-active/pages/shoppingcar/shoppingcar.wxml
@@ -9,12 +9,12 @@
               <text class="price">￥{{item.retailPrice}}</text>
             </view>
             <view class="operation">
-              <text data-cartid="{{item.itemId}}" class="decr-btn" bindtap="decrFn">-</text>
+              <text data-cartid="{{item.id}}" class="decr-btn" bindtap="decrFn">-</text>
               <input class="operation-result" disabled="true" value="{{item.moq}}" type="number" />
-              <text data-cartid="{{item.itemId}}" hover-class="hover" class="incr-btn" bindtap="incrFn" >+</text>
+              <text data-cartid="{{item.id}}" hover-class="hover" class="incr-btn" bindtap="incrFn" >+</text>
             </view>
           </view>
-          <text class="del-order" bindtap="removeFn" data-cartid="{{item.itemId}}"></text>
+          <text class="del-order" bindtap="removeFn" data-cartid="{{item.id}}"></text>
         </view>
 </view>
 <view class="footBar">
